2001-09-24 Frank Felfe <innerspace@iname.com>

	* src/helper/sodipodi-ctrl.*: New ctrl-shapes

	* src/knot.*: Ditto

	* src/pixmaps/cursor-node-d.xpm: New file
	
	* src/pixmaps/cursor-node-m.xpm: New file
	
	* src/pixmaps/cursor-select-d.xpm: New file
	
	* src/pixmaps/cursor-select-m.xpm: New file
	
	* src/pixmaps/handles.xpm: New file
	
	* src/sp-cursor.* (sp_cursor_new_from_xpm): New function

	* src/seltrans.c: Use new ctrl-shapes and cursors

 	* src/seltrans-handles.*: Use new ctrl-shapes 

	* src/select-context.c (sp_node_context_class_init): Init cursors and handle pix

	* src/nodepath.* (node_event): Redirect key events
	(node_key): New key handler
	(sp_node_selected_break): Handle first and last node
	(node_ctrl_moved): Update ctrlline after setting coords
	(sp_nodepath_node_new): Use new ctrl-shapes and cursors

	* src/node-context.c (sp_node_context_class_init): Init cursors

2001-09-22  Mitsuru Oka <oka326@parkcity.ne.jp>

	* src/dynadraw-context.c: New file

	* src/dynadraw-context.h: New file

	* src/event-context.c (sp_event_context_set_dynahand): New handler

2001-09-21  Lauris Kaplinski  <lauris@ximian.com>

	* src/svg/svg-path.c: Quick port of latest librsvg path code

2001-09-19  Lauris Kaplinski  <lauris@ximian.com>

	* src/document.c (sp_document_destroy): Remove document
	(sp_document_new): Add document
	(sp_document_new_from_mem): Ditto

	* src/sodipodi.c (sodpodi_remove_document): New method
	(sodpodi_add_document): Ditto
	(sodipodi_segv_handler): Not very intelligent signal handler

2001-09-18  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/gradient-selector.c (sp_gradient_selector_add_vector_clicked): 
	New handler
	(sp_gradient_selector_delete_vector_clicked): Ditto (empty)
	(sp_gradient_selector_load_selection): New method

	* src/desktop.c (sp_desktop_init): Typo fix

2001-09-17  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/gradient-vector.c (sp_gradient_vector_widget_destroy): Handler