@@ -1,0 +1,118 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
+.TH SODIPODI 1 "April 2001" Version @VERSION@
+.SH NAME
+sodipodi \- a vector based drawing program.
+.SH SYNOPSIS
+.B sodipodi
+[\fIOPTION\fR...]
+.SH DESCRIPTION
+Oaf options
+.TP
+\fB\-\-oaf\-od\-ior\fR=\fIIOR\fR
+Object directory to use when registering servers
+.TP
+\fB\-\-oaf\-ior\-fd\fR=\fIFD\fR
+File descriptor to print IOR on
+.TP
+\fB\-\-oaf\-activate\-iid\fR=\fIIID\fR
+IID to activate
+.TP
+\fB\-\-oaf\-private\fR
+Prevent registering of server with OAF
+.PP
+GNOME options
+.TP
+\fB\-\-disable\-sound\fR
+Disable sound server usage
+.TP
+\fB\-\-enable\-sound\fR
+Enable sound server usage
+.TP
+\fB\-\-espeaker\fR=\fIHOSTNAME\fR:PORT
+Host:port on which the sound server to use is
+running
+.HP
+\fB\-\-version\fR
+.PP
+Help options
+.TP
+-?, \fB\-\-help\fR
+Show this help message
+.TP
+\fB\-\-usage\fR
+Display brief usage message
+.PP
+GTK options
+.TP
+\fB\-\-gdk\-debug\fR=\fIFLAGS\fR
+Gdk debugging flags to set
+.TP
+\fB\-\-gdk\-no\-debug\fR=\fIFLAGS\fR
+Gdk debugging flags to unset
+.TP
+\fB\-\-display\fR=\fIDISPLAY\fR
+X display to use
+.TP
+\fB\-\-sync\fR
+Make X calls synchronous
+.TP
+\fB\-\-no\-xshm\fR
+Don't use X shared memory extension
+.TP
+\fB\-\-name\fR=\fINAME\fR
+Program name as used by the window manager
+.TP
+\fB\-\-class\fR=\fICLASS\fR
+Program class as used by the window manager
+.HP
+\fB\-\-gxid_host\fR=\fIHOST\fR
+.HP
+\fB\-\-gxid_port\fR=\fIPORT\fR
+.HP
+\fB\-\-xim\-preedit\fR=\fISTYLE\fR
+.HP
+\fB\-\-xim\-status\fR=\fISTYLE\fR
+.TP
+\fB\-\-gtk\-debug\fR=\fIFLAGS\fR
+Gtk+ debugging flags to set
+.TP
+\fB\-\-gtk\-no\-debug\fR=\fIFLAGS\fR
+Gtk+ debugging flags to unset
+.TP
+\fB\-\-g\-fatal\-warnings\fR
+Make all warnings fatal
+.TP
+\fB\-\-gtk\-module\fR=\fIMODULE\fR
+Load an additional Gtk module
+.PP
+GNOME GUI options
+.HP
+\fB\-\-disable\-crash\-dialog\fR
+.PP
+Session management options
+.TP
+\fB\-\-sm\-client\-id\fR=\fIID\fR
+Specify session management ID
+.TP
+\fB\-\-sm\-config\-prefix\fR=\fIPREFIX\fR
+Specify prefix of saved configuration
+.TP
+\fB\-\-sm\-disable\fR
+Disable connection to session manager
+.PP
+sodipodi options
+.TP
+\fB\-z\fR, \fB\-\-without\-gui\fR
+Do not use GUI. NB! if exist, should be FIRST
+argument!
+.TP
+\fB\-f\fR, \fB\-\-file\fR=\fIFILENAME\fR
+Open specified file (option string may be
+excluded)
+.TP
+\fB\-p\fR, \fB\-\-print\fR=\fIFILENAME\fR
+Print files to specified output file (use '|
+program' for pipe)
+.SH AUTHOR
+.PP
+This manual page was written by Davide Puricelli <evo@debian.org>.
