@@ -1,3 +1,9 @@
+2001-09-25  Christopher R. Gabriel  <cgabriel@cgabriel.org>
+
+	* sodipodi.1.in: new man page
+	* configure.in: Likewise
+	* Makefile.am (man_MANS): Likewise
+
 2001-09-24 Frank Felfe <innerspace@iname.com>
 
 	* src/helper/sodipodi-ctrl.*: New ctrl-shapes
